<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/nav_photos" />


        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_settings" />

        <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/logout"
        android:title="Logout" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />

            <item
                android:id="@+id/nav_developers"
                android:title="Developers" />
            <item
                android:id="@+id/nav_findUs"
                android:title="@string/nav_findUs"/>
        </menu>
    </item>

</menu>